# tech-interview

./: .editorconfig  README.md
C++/GTest/: CMakeLists.txt  whattotest.cpp
C++/check_brackets/: check_brackets.cpp
C++/fibonacci/: fibonacci.cpp
C++/gcd/: gcd.cpp
C++/graph/: Makefile  disjoint_set.h  graph.h  graph_sim.h  main.cpp  mst_data.txt
C++/kmeans/: CMakeLists.txt  Doxyfile  README.dox
C++/kmeans/include/: Cluster.h  KMeans.h  Point.h  util.h
C++/kmeans/src/: main.cpp  unit_tests.cpp
C++/linked_list/: Makefile  list.h  main.cpp  node.h
C++/max_pair_product/: max_pair_prod.cpp
C++/misc/: bitset.cpp  bst.cpp  cachesim.cpp  check_brackets.cpp  cpp_basics.cpp  data_structures.cpp  fibonacci.cpp  gcd.cpp  inheritance.cpp  max_pair_prod.cpp  point.cpp  pop_count.cpp  priority_queue.cpp  set.cpp  string.cpp  testcases.txt
C++/point/: main.cpp  point.cpp  point.h
C++/poker/: Makefile  card.h  deck.h  main.cpp  poker.h
CUDA/add/: Makefile  add.cu
CUDA/m_add/: Makefile  m_add.cu
CUDA/m_transpose/: Makefile  m_transpose.cu
CUDA/saxpy/: Makefile  saxpy.cu
CUDA/v_dot_prod/: Makefile  v_dot_prod.cu
DSA/: binary_tree.py  bst.py  cache_sim.cpp  conv2d.py  dp.py  factorial.py  fibonacci.py  gcd.py  graph.py  linked_list.py  list_permutation.py  matmul.py  min_heap.py  reverse_words.py  sorting.py
DSA/Grind75/: bin_search.py  flood_fill.py  linked_list_cycle.py  queue_using_stacks.py  stock.py  two_sum.py  valid_parentheses.py
MPI/hello/: Makefile  hello.c  run_hello.sh
MPI/matmul/: Makefile  matmul.c  run_matmul.sh
MPI/ping/: Makefile  ping.c  run_ping.sh
MPI/ring/: Makefile  ring.c  run_ring.sh
MPI/saxpy/: Makefile  run_saxpy.sh  saxpy.c
MPI/sum_matrix/: Makefile  run_sum_matrix.sh  sum_matrix.c
OpenMP/box_blur_filter/: CMakeLists.txt  Doxyfile  README.dox
OpenMP/box_blur_filter/include/: Image.h  Pixel.h
OpenMP/box_blur_filter/src/: main.cpp  unit_tests.cpp
OpenMP/matmul/: CMakeLists.txt  Doxyfile  README.dox
OpenMP/matmul/include/: matmul.h
OpenMP/matmul/src/: main.cpp  unit_tests.cpp
Python/hash_table/: HashTable.py  Main.py  PhoneBook.py
Python/machine_simulator/: container.py  machine_sim1.py
Python/matrix_multiplication/: matmul.py
Python/misc/: bst.py  combinations.py  dict.py  facebook.py  fibonacci.py  first_n_primes.py  flood_fill.py  heapsort.py  itemgetter.py  lambda.py  linked_list.py  matmul.py  numpaths.py  permutations.py  rat_maze.py  reverse_words.py  sieve_eratosthenes.py  stack.py  unique_combinations.py  wordcount.py  zip.py
Python/network_packet_simulator/: Buffer.py  Network_Simulator.py  Packet.py
Python/numpy/: basics.py  broadcast.py  copy.py  shape.py
Python/parallel_job_processing/: Job.py  Parallel_Process.py  Thread.py  (+1 more)
(+45 files in other folders)
